temporal: fix msg typo
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66277 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasslibs_ar.po
+++ b/locale/po/grasslibs_ar.po
@@ -3699,7 +3699,7 @@ msgstr "مسقط غير معروف"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "غير موجود'%s' الفيكتور"
 
 #: ../lib/python/temporal/open_stds.py:105
