--- a/locale/po/grasslibs_de.po
+++ b/locale/po/grasslibs_de.po
@@ -3745,7 +3745,7 @@ msgstr "Unbekannter Vektortyp."
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Rasterkarte <%s> wurde nicht gefunden."
 
 #: ../lib/python/temporal/open_stds.py:105
