--- a/locale/po/grasslibs_es.po
+++ b/locale/po/grasslibs_es.po
@@ -3886,7 +3886,7 @@ msgstr "Tipo de vector desconocido."
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "No se ha encontrado el mapa raster <%s>."
 
 #: ../lib/python/temporal/open_stds.py:105
