--- a/locale/po/grasslibs_pt.po
+++ b/locale/po/grasslibs_pt.po
@@ -3737,7 +3737,7 @@ msgstr "Tipo de vetor desconhecido"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Vetor de entrada '%s' não encontrado"
 
 #: ../lib/python/temporal/open_stds.py:105
