--- a/locale/po/grasslibs_tr.po
+++ b/locale/po/grasslibs_tr.po
@@ -3670,7 +3670,7 @@ msgstr "bilinmeyen enterpolasyon tipi"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "<%s> raster haritası bulunamadı"
 
 #: ../lib/python/temporal/open_stds.py:105
