--- a/locale/po/grasslibs_fi.po
+++ b/locale/po/grasslibs_fi.po
@@ -3562,7 +3562,7 @@ msgstr ""
 
 #: ../lib/python/temporal/open_stds.py:66
 #, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr ""
 
 #: ../lib/python/temporal/open_stds.py:105
