--- a/locale/po/grasslibs_it.po
+++ b/locale/po/grasslibs_it.po
@@ -3755,7 +3755,7 @@ msgstr "Tipo di interpolazione sconosciuta"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "Raster <%s> non trovato"
 
 #: ../lib/python/temporal/open_stds.py:105
