--- a/locale/po/grasslibs_ro.po
+++ b/locale/po/grasslibs_ro.po
@@ -3628,7 +3628,7 @@ msgstr "Tipul trăsăturii"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr ""
 
 #: ../lib/python/temporal/open_stds.py:105
