--- a/locale/po/grasslibs_zh.po
+++ b/locale/po/grasslibs_zh.po
@@ -3739,7 +3739,7 @@ msgstr "未知矢量类型"
 
 #: ../lib/python/temporal/open_stds.py:66
 #, fuzzy, python-format
-msgid "Space time %(sp)s dataset <%(name)s> no found"
+msgid "Space time %(sp)s dataset <%(name)s> not found"
 msgstr "输入矢量'%s'未找到"
 
 #: ../lib/python/temporal/open_stds.py:105
