--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -10644,7 +10644,7 @@ msgstr "[%s]لم يتم فتح ملف الخلية ل "
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "الخريطة الراسترية المطلوب الضبط عليها"
 
 #: ../vector/v.net/turntable.c:675
