--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -11082,7 +11082,7 @@ msgstr "Impossible d'ouvrir la couche vecteur [%s]"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "La table <%s> n'existe pas dans la base de données <%s>"
 
 #: ../vector/v.net/turntable.c:675
