--- a/locale/po/grassmods_it.po
+++ b/locale/po/grassmods_it.po
@@ -10488,7 +10488,7 @@ msgstr "Impossibile aprire la mappa vettoriale <%s>"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "La tabella <%s> non esiste nel database <%s>"
 
 #: ../vector/v.net/turntable.c:675
