--- a/locale/po/grassmods_ja.po
+++ b/locale/po/grassmods_ja.po
@@ -10503,7 +10503,7 @@ msgstr "ベクトルマップ <%s> を開けません"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "テーブル <%s> はデータベース <%s> 中にありません"
 
 #: ../vector/v.net/turntable.c:675
