--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -10266,7 +10266,7 @@ msgstr "출력할 격자지도"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "출력할 격자지도"
 
 #: ../vector/v.net/turntable.c:675
