--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -10625,7 +10625,7 @@ msgstr "neiespējami atvērt <%s>"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "Pārkodēt rastra kartes."
 
 #: ../vector/v.net/turntable.c:675
