--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -10624,7 +10624,7 @@ msgstr "Невозможно открыть векторный слой <%s>"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "Таблица <%s> не существует в базе данных <%s>"
 
 #: ../vector/v.net/turntable.c:675
