--- a/locale/po/grassmods_vi.po
+++ b/locale/po/grassmods_vi.po
@@ -10615,7 +10615,7 @@ msgstr "Không thể mở bản đồ vector <%s>"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "Bảng <%s> không có trong CSDL <%s>"
 
 #: ../vector/v.net/turntable.c:675
