--- a/locale/po/grassmods_zh.po
+++ b/locale/po/grassmods_zh.po
@@ -10618,7 +10618,7 @@ msgstr "无法找到矢量地图 [%s]"
 
 #: ../vector/v.net/turntable.c:670
 #, fuzzy, c-format
-msgid "Arc layer <%s> does not exists in map <%s>."
+msgid "Arc layer <%s> does not exist in map <%s>."
 msgstr "包含结果的栅格图的名称"
 
 #: ../vector/v.net/turntable.c:675
