--- a/locale/po/grasswxpy_fr.po
+++ b/locale/po/grasswxpy_fr.po
@@ -6698,7 +6698,7 @@ msgid "Creating turntable..."
 msgstr ""
 
 #: ../gui/wxpython/vnet/dialogs.py:798
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "La couche vecteur entrée n'existe pas."
 
 #: ../gui/wxpython/vnet/dialogs.py:816
