--- a/locale/po/grasswxpy_lv.po
+++ b/locale/po/grasswxpy_lv.po
@@ -6432,7 +6432,7 @@ msgstr "Izveidot tabulu?"
 
 #: ../gui/wxpython/vnet/dialogs.py:798
 #, fuzzy
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "Īpašība %s neeksistē"
 
 #: ../gui/wxpython/vnet/dialogs.py:816
