--- a/locale/po/grasswxpy_ru.po
+++ b/locale/po/grasswxpy_ru.po
@@ -6931,7 +6931,7 @@ msgstr "Загрузка данных..."
 
 #: ../gui/wxpython/vnet/dialogs.py:798
 #, fuzzy
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "Слой <%s> не найден."
 
 #: ../gui/wxpython/vnet/dialogs.py:816
