--- a/locale/po/grasslibs_fi.po
+++ b/locale/po/grasslibs_fi.po
@@ -3503,7 +3503,7 @@ msgstr ""
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr ""
 
 #: ../lib/python/pygrass/raster/abstract.py:274
