--- a/locale/po/grasslibs_fr.po
+++ b/locale/po/grasslibs_fr.po
@@ -3718,7 +3718,7 @@ msgstr "La couche vectorielle <%s> existe déjà et va être écrasé"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "La table <%s> liée à la carte vecteur <%s> n'existe pas "
 
 #: ../lib/python/pygrass/raster/abstract.py:274
