--- a/locale/po/grasslibs_ko.po
+++ b/locale/po/grasslibs_ko.po
@@ -3599,7 +3599,7 @@ msgstr "Datum %s 테이블파일을 열 수 없습니다"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "임시파일을 열 수 없습니다"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
