--- a/locale/po/grasslibs_ru.po
+++ b/locale/po/grasslibs_ru.po
@@ -3694,7 +3694,7 @@ msgstr "Векторный слой <%s> уже существует и буде
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Таблица <%s> связанная с векторным слоем <%s> не существует"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
