--- a/locale/po/grasslibs_th.po
+++ b/locale/po/grasslibs_th.po
@@ -3682,7 +3682,7 @@ msgstr "แผนที่เชิงเส้น <%s> มีอยู่แล
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "ไม่สามารถค้นหาตาราง <%s> ที่เชื่อมกับข้อมูลเชิงเส้น <%s>"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
