--- a/locale/po/grasslibs_tr.po
+++ b/locale/po/grasslibs_tr.po
@@ -3611,7 +3611,7 @@ msgstr "<%s> vektör haritası zaten mevcut ve üzerine yazılacak"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "<%s> raster haritası boş"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
