fix msg grammar
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@66333 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasslibs_ar.po
+++ b/locale/po/grasslibs_ar.po
@@ -3513,7 +3513,7 @@ msgstr "موجود ولايمكن تغييره '%s' الفيكتور"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "'%s' لم يمكن فتح ملف التاريخ للفيكتور"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
