--- a/locale/po/grasswxpy_ja.po
+++ b/locale/po/grasswxpy_ja.po
@@ -6608,7 +6608,7 @@ msgstr "データ ロード中... "
 
 #: ../gui/wxpython/vnet/dialogs.py:798
 #, fuzzy
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "ベクトルマップ <%s> が見つかりません"
 
 #: ../gui/wxpython/vnet/dialogs.py:816
