--- a/locale/po/grasswxpy_pt.po
+++ b/locale/po/grasswxpy_pt.po
@@ -6838,7 +6838,7 @@ msgstr "Carregando dados..."
 
 #: ../gui/wxpython/vnet/dialogs.py:798
 #, fuzzy
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "Mapa <%s> não encontrado"
 
 #: ../gui/wxpython/vnet/dialogs.py:816
