--- a/locale/po/grasswxpy_vi.po
+++ b/locale/po/grasswxpy_vi.po
@@ -6773,7 +6773,7 @@ msgstr "Đang nạp dữ liệu..."
 
 #: ../gui/wxpython/vnet/dialogs.py:798
 #, fuzzy
-msgid "Input vector map does not exists."
+msgid "Input vector map does not exist."
 msgstr "Không tìm thấy bản đồ <%s>."
 
 #: ../gui/wxpython/vnet/dialogs.py:816
