--- a/locale/po/grasslibs_de.po
+++ b/locale/po/grasslibs_de.po
@@ -3552,7 +3552,7 @@ msgstr "Vektorkarte <%s> existiert bereits und wird überschrieben."
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Tabelle <%s> verknüpft mit Vektorkarte <%s> existiert nicht."
 
 #: ../lib/python/pygrass/raster/abstract.py:274
