--- a/locale/po/grasslibs_el.po
+++ b/locale/po/grasslibs_el.po
@@ -3553,7 +3553,7 @@ msgstr ""
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr ""
 "Ο πίνακας <%s> που είναι συνδεδεμένος με τον διανυσματικό χάρτη <%s> δεν "
 "υπάρχει"
