--- a/locale/po/grasslibs_es.po
+++ b/locale/po/grasslibs_es.po
@@ -3689,7 +3689,7 @@ msgstr "El mapa vectorial <%s> ya existía y será rescrito."
 #
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "La tabla <%s> enlazada con el mapa vectorial <%s> no existe."
 
 #: ../lib/python/pygrass/raster/abstract.py:274
