--- a/locale/po/grasslibs_it.po
+++ b/locale/po/grasslibs_it.po
@@ -3563,7 +3563,7 @@ msgstr "Il vettoriale <%s> è già presente e sarà sovrascritto"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Tabella <%s> collegata al vettoriale <%s> non esiste"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
