--- a/locale/po/grasslibs_ja.po
+++ b/locale/po/grasslibs_ja.po
@@ -3551,7 +3551,7 @@ msgstr "ベクトルマップ <%s> は既に存在し上書きされます"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "ベクトルマップ <%s> にリンクするテーブル <%s> は存在しません"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
