--- a/locale/po/grasslibs_lv.po
+++ b/locale/po/grasslibs_lv.po
@@ -3500,7 +3500,7 @@ msgstr "Vektors '%s' jau eksistē un tiks pārrakstīts."
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Nevar atvērt vēsturi vektoram '%s'"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
