--- a/locale/po/grasslibs_pl.po
+++ b/locale/po/grasslibs_pl.po
@@ -3522,7 +3522,7 @@ msgstr "Mapa wektorowa <%s> już istnieje i zostanie nadpisana"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Tabela <%s> podłączona do mapy wektorowej <%s> nie istnieje"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
