--- a/locale/po/grasslibs_pt_br.po
+++ b/locale/po/grasslibs_pt_br.po
@@ -3536,7 +3536,7 @@ msgstr "O vetor '%s' já existe e será sobrescrito."
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Não consegui abrir histórico para o vetor %s"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
