--- a/locale/po/grasslibs_ro.po
+++ b/locale/po/grasslibs_ro.po
@@ -3444,7 +3444,7 @@ msgstr ""
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Harta raster <%s> nu este găsită"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
