--- a/locale/po/grasslibs_vi.po
+++ b/locale/po/grasslibs_vi.po
@@ -3554,7 +3554,7 @@ msgstr "Bản đồ vec-tơ <%s> đã có và sẽ bị ghi đè"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "Bảng <%s> được liên kết vào bản đồ vec-tơ <%s> không tồn tại"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
