--- a/locale/po/grasslibs_zh.po
+++ b/locale/po/grasslibs_zh.po
@@ -3553,7 +3553,7 @@ msgstr "矢量'%s'已经存在，它将会被覆盖。"
 
 #: ../lib/python/pygrass/raster/__init__.py:432
 #, fuzzy, python-brace-format
-msgid "Raster map <{0}> does not exists"
+msgid "Raster map <{0}> does not exist"
 msgstr "无法打开矢量'%s'的历史记录"
 
 #: ../lib/python/pygrass/raster/abstract.py:274
