Various typo fixes, part 2 (https://trac.osgeo.org/grass/ticket/2776)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66581 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_pt.po
+++ b/locale/po/grassmods_pt.po
@@ -18790,7 +18790,7 @@ msgstr "<%s> criados na base de dados."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19699,7 +19699,7 @@ msgstr "Converte vetores OGR para GRASS. Drivers disponíveis:\n"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Gera um mapa das áreas problemáticas"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
