--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -18361,7 +18361,7 @@ msgstr "%s لم يتم فتح قاعدة البيانات"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19243,7 +19243,7 @@ msgstr "ادخال ملف راسترى ثنائى كطبقة خريطة راست
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "الخريطة الراسترية المخرجة للمساحات ذات مشكلة"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
