--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -18448,7 +18448,7 @@ msgstr "Vytvořit prázdnou databázi."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19341,7 +19341,7 @@ msgstr ""
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Výstupnívektorová mapa s chybami "
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
