--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -18487,7 +18487,7 @@ msgstr "Erzeugt eine leere Datenbank."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19377,7 +19377,7 @@ msgstr "Konvertiere OGR Vektorlayer in das GRASS Vektorkarten."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Ausgabe-Vektorkarte, in die die Fehlern geschrieben werden."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
