--- a/locale/po/grassmods_es.po
+++ b/locale/po/grassmods_es.po
@@ -18573,7 +18573,7 @@ msgstr "Ordenar los mapas por categoría"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19458,7 +19458,7 @@ msgstr ""
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Mapa vectorial de salida de errores"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
