--- a/locale/po/grassmods_fi.po
+++ b/locale/po/grassmods_fi.po
@@ -16943,7 +16943,7 @@ msgstr ""
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -17731,7 +17731,7 @@ msgid ""
 msgstr ""
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr ""
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
