--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -19405,7 +19405,7 @@ msgstr "Impossible d'ouvrir la base de données %s"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -20330,7 +20330,7 @@ msgstr "Convertit des fichiers vecteurs OGR dans GRASS. Pilotes disponibles:\n"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "couche raster des zones à problèmes"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
