--- a/locale/po/grassmods_it.po
+++ b/locale/po/grassmods_it.po
@@ -18188,7 +18188,7 @@ msgstr "Crea un database vuoto"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19078,7 +19078,7 @@ msgstr "Converte vettore OGR in vettore GRASS"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Mappa vettoriale degli errori di output"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
