--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -17697,7 +17697,7 @@ msgstr "출력할 격자지도"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -18546,7 +18546,7 @@ msgstr "출력할 격자지도"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "출력할 격자지도"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
