--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -18416,7 +18416,7 @@ msgstr "Nevaratvērt datubāzi %s"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19295,7 +19295,7 @@ msgstr "Konvertē OGR vektorus uz GRASS vektoriem. Pieejamie draiveri:\n"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Izejas rastra kartes nosaukums"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
