--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -18241,7 +18241,7 @@ msgstr "Tworzy pustą bazę danych."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19121,7 +19121,7 @@ msgstr "Konwertuje warstwy wektorowe OGR na wektorowe mapy GRASS."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Wyjściowa mapa wektorowa błędów"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
