--- a/locale/po/grassmods_ro.po
+++ b/locale/po/grassmods_ro.po
@@ -17180,7 +17180,7 @@ msgstr ""
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -17989,7 +17989,7 @@ msgstr ""
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Actualizări de metadate a hărții vectoriale."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
