--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -18515,7 +18515,7 @@ msgstr "Создать пустую базу данных."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19410,7 +19410,7 @@ msgstr "Конвертировать векторные слои OGR в вект
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Выходной векторный слой ошибок"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
