--- a/locale/po/grassmods_sl.po
+++ b/locale/po/grassmods_sl.po
@@ -18449,7 +18449,7 @@ msgstr "Ne morem odpreti baze podatkov %s"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19338,7 +19338,7 @@ msgstr "Uvozi binarno rastrsko datoteko v GRASS-ov rastrski sloj."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Ime izhodnega rastrskega sloja problematiènih obmoèij"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
