--- a/locale/po/grassmods_th.po
+++ b/locale/po/grassmods_th.po
@@ -18352,7 +18352,7 @@ msgstr "สร้างฐานข้อมูลเปล่า"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19231,7 +19231,7 @@ msgstr "แปลง ชั้นข้อมูลเชิงเส้น OGR 
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "แผนที่เชิงเส้นผลลัพธ์ สำหรับ ข้อผิดพลาด"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
