--- a/locale/po/grassmods_tr.po
+++ b/locale/po/grassmods_tr.po
@@ -18031,7 +18031,7 @@ msgstr "Boş veritabanı oluşturur."
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -18913,7 +18913,7 @@ msgstr "OGR vektör katmanını GRASS vektör haritasına dönüştürür."
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "Sorunlu alanların vektör çıktı haritası"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
