--- a/locale/po/grassmods_zh.po
+++ b/locale/po/grassmods_zh.po
@@ -18407,7 +18407,7 @@ msgstr "创建一个空数据库"
 
 #: ../locale/scriptstrings/t.rast.what_to_translate.c:7
 msgid ""
-"The layout of the ouput. One point per row (row), one point per column "
+"The layout of the output. One point per row (row), one point per column "
 "(col), all timsteps in one row (timerow)"
 msgstr ""
 
@@ -19295,7 +19295,7 @@ msgstr "将GRASS矢量图层转化为GRASS栅格图层。"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:10
 #, fuzzy
-msgid "Ouput vector map extents"
+msgid "Output vector map extents"
 msgstr "输出的有问题区域的栅格图"
 
 #: ../locale/scriptstrings/v.import_to_translate.c:11
