--- a/locale/po/grassmods_th.po
+++ b/locale/po/grassmods_th.po
@@ -42936,7 +42936,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "การกำหนด"
 
 #: ../imagery/i.vi/main.c:187
