--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -42793,7 +42793,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "طباعة نوع الملف الراسترى فقط"
 
 #: ../imagery/i.vi/main.c:187
