--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -43469,7 +43469,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Einstellungen"
 
 #: ../imagery/i.vi/main.c:187
