--- a/locale/po/grassmods_es.po
+++ b/locale/po/grassmods_es.po
@@ -43576,7 +43576,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Configuraciones"
 
 #: ../imagery/i.vi/main.c:187
