--- a/locale/po/grassmods_ja.po
+++ b/locale/po/grassmods_ja.po
@@ -42663,7 +42663,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "設定 "
 
 #: ../imagery/i.vi/main.c:187
