--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -41343,7 +41343,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "출력할 격자지도"
 
 #: ../imagery/i.vi/main.c:187
