--- a/locale/po/grassmods_pt.po
+++ b/locale/po/grassmods_pt.po
@@ -43970,7 +43970,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Fonte"
 
 #: ../imagery/i.vi/main.c:187
