--- a/locale/po/grassmods_ro.po
+++ b/locale/po/grassmods_ro.po
@@ -40152,7 +40152,7 @@ msgstr ""
 
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr ""
 
 #: ../imagery/i.vi/main.c:187
