--- a/locale/po/grassmods_zh.po
+++ b/locale/po/grassmods_zh.po
@@ -43016,7 +43016,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "无法获取栅格行\n"
 
 #: ../imagery/i.vi/main.c:187
