--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -44073,7 +44073,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Réglages"
 
 #: ../imagery/i.vi/main.c:187
