--- a/locale/po/grassmods_it.po
+++ b/locale/po/grassmods_it.po
@@ -41160,7 +41160,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Impostazioni"
 
 #: ../imagery/i.vi/main.c:187
