--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -41222,7 +41222,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Nevarēja atrast rastra failu %s"
 
 #: ../imagery/i.vi/main.c:187
