--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -41986,7 +41986,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Параметры"
 
 #: ../imagery/i.vi/main.c:187
