--- a/locale/po/grassmods_tr.po
+++ b/locale/po/grassmods_tr.po
@@ -40663,7 +40663,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Ayarlar"
 
 #: ../imagery/i.vi/main.c:187
