--- a/locale/po/grassmods_vi.po
+++ b/locale/po/grassmods_vi.po
@@ -41985,7 +41985,7 @@ msgstr ""
 #: ../imagery/i.vi/main.c:181 ../imagery/i.vi/main.c:188
 #: ../imagery/i.vi/main.c:195
 #, fuzzy
-msgid "MSAVI2 seetings"
+msgid "MSAVI2 settings"
 msgstr "Các thiết lập"
 
 #: ../imagery/i.vi/main.c:187
