--- a/locale/po/grassmods_es.po
+++ b/locale/po/grassmods_es.po
@@ -39230,7 +39230,7 @@ msgstr "Ningún elemento seleccionado, nada que editar"
 
 #: ../vector/v.out.ascii/main.c:163
 #, fuzzy
-msgid "An error occured, nothing to be exported"
+msgid "An error occurred, nothing to be exported"
 msgstr "Ningún elemento seleccionado, nada que editar"
 
 #: ../vector/v.out.dxf/main.c:58
@@ -40622,11 +40622,11 @@ msgid "Cannot get db link info"
 msgstr "No se puede obtener leer la información del enlace a la base de datos"
 
 #: ../vector/v.perturb/normalrs.c:31
-msgid "normalsv: restoration of unitialized block"
+msgid "normalsv: restoration of uninitialized block"
 msgstr "normalsv: restauración de bloque no inicializado"
 
 #: ../vector/v.perturb/normalsv.c:29
-msgid "normalsv: save of unitialized block"
+msgid "normalsv: save of uninitialized block"
 msgstr "normalsv: guardar bloque no inicializado"
 
 #: ../vector/v.proj/main.c:71
