--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -38498,7 +38498,7 @@ msgstr "Edytować plik kategorii dla [%s]? "
 
 #: ../vector/v.out.ascii/main.c:163
 #, fuzzy
-msgid "An error occured, nothing to be exported"
+msgid "An error occurred, nothing to be exported"
 msgstr "Edytować plik kategorii dla [%s]? "
 
 #: ../vector/v.out.dxf/main.c:58
@@ -39808,11 +39808,11 @@ msgid "Cannot get db link info"
 msgstr "Nie można pobrać informacji o odnośniku do bazy danych"
 
 #: ../vector/v.perturb/normalrs.c:31
-msgid "normalsv: restoration of unitialized block"
+msgid "normalsv: restoration of uninitialized block"
 msgstr ""
 
 #: ../vector/v.perturb/normalsv.c:29
-msgid "normalsv: save of unitialized block"
+msgid "normalsv: save of uninitialized block"
 msgstr ""
 
 #: ../vector/v.proj/main.c:71
