--- a/locale/po/grasswxpy_it.po
+++ b/locale/po/grasswxpy_it.po
@@ -5626,7 +5626,7 @@ msgstr ""
 #: ../gui/wxpython/iscatt/controllers.py:433
 #, python-format
 msgid ""
-"Error occured during computation of scatter plot category:\n"
+"Error occurred during computation of scatter plot category:\n"
 "%s"
 msgstr ""
 "Un errore è occorso durante la creazione della categoria dello scatter "
@@ -7708,14 +7708,14 @@ msgstr "Area: {area} {unit}\n"
 #: ../gui/wxpython/mapwin/base.py:195
 #, python-format
 msgid ""
-"Error occured during calling of handler: %s \n"
+"Error occurred during calling of handler: %s \n"
 "Handler was unregistered."
 msgstr ""
 
 #: ../gui/wxpython/mapwin/base.py:275
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered."
 msgstr ""
 
@@ -7727,7 +7727,7 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:308
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered"
 msgstr ""
 
