--- a/locale/po/grasswxpy_pt.po
+++ b/locale/po/grasswxpy_pt.po
@@ -5995,7 +5995,7 @@ msgstr ""
 #: ../gui/wxpython/iscatt/controllers.py:433
 #, python-format
 msgid ""
-"Error occured during computation of scatter plot category:\n"
+"Error occurred during computation of scatter plot category:\n"
 "%s"
 msgstr ""
 
@@ -8215,14 +8215,14 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:195
 #, python-format
 msgid ""
-"Error occured during calling of handler: %s \n"
+"Error occurred during calling of handler: %s \n"
 "Handler was unregistered."
 msgstr ""
 
 #: ../gui/wxpython/mapwin/base.py:275
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered."
 msgstr ""
 
@@ -8234,7 +8234,7 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:308
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered"
 msgstr ""
 
