--- a/locale/po/grasswxpy_vi.po
+++ b/locale/po/grasswxpy_vi.po
@@ -5953,7 +5953,7 @@ msgstr ""
 #: ../gui/wxpython/iscatt/controllers.py:433
 #, python-format
 msgid ""
-"Error occured during computation of scatter plot category:\n"
+"Error occurred during computation of scatter plot category:\n"
 "%s"
 msgstr ""
 
@@ -8169,14 +8169,14 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:195
 #, python-format
 msgid ""
-"Error occured during calling of handler: %s \n"
+"Error occurred during calling of handler: %s \n"
 "Handler was unregistered."
 msgstr ""
 
 #: ../gui/wxpython/mapwin/base.py:275
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered."
 msgstr ""
 
@@ -8188,7 +8188,7 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:308
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered"
 msgstr ""
 
