--- a/locale/po/grasswxpy_lv.po
+++ b/locale/po/grasswxpy_lv.po
@@ -5546,7 +5546,7 @@ msgstr ""
 #: ../gui/wxpython/iscatt/controllers.py:433
 #, python-format
 msgid ""
-"Error occured during computation of scatter plot category:\n"
+"Error occurred during computation of scatter plot category:\n"
 "%s"
 msgstr ""
 
@@ -7554,14 +7554,14 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:195
 #, python-format
 msgid ""
-"Error occured during calling of handler: %s \n"
+"Error occurred during calling of handler: %s \n"
 "Handler was unregistered."
 msgstr ""
 
 #: ../gui/wxpython/mapwin/base.py:275
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered."
 msgstr ""
 
@@ -7573,7 +7573,7 @@ msgstr ""
 #: ../gui/wxpython/mapwin/base.py:308
 #, python-format
 msgid ""
-"Error occured during unregistration of handler: %s \n"
+"Error occurred during unregistration of handler: %s \n"
 "                                        Handler was unregistered"
 msgstr ""
 
