Various typos (fixes #2882 Patch for various spelling errors (sebastic))
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67703 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_el.po
+++ b/locale/po/grassmods_el.po
@@ -34271,7 +34271,7 @@ msgstr "Αδυναμία ανοίγματος του χάρτη raster <%s>"
 
 #: ../vector/v.transform/main.c:277
 #, fuzzy
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr "Εγγραφή %s από %s..."
 
 #: ../vector/v.transform/main.c:290
