--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -35454,7 +35454,7 @@ msgstr "Neiespējami atvērt šūnu failu[%s]"
 
 #: ../vector/v.transform/main.c:277
 #, fuzzy
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr "Drukā ... "
 
 #: ../vector/v.transform/main.c:290
