--- a/locale/po/grassmods_fi.po
+++ b/locale/po/grassmods_fi.po
@@ -32835,7 +32835,7 @@ msgid "Unable to tokenize column string: [%s]"
 msgstr ""
 
 #: ../vector/v.transform/main.c:277
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr ""
 
 #: ../vector/v.transform/main.c:290
