Various typos (backport r67703 from trunk)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@67704 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -34384,7 +34384,7 @@ msgstr "[%s]لم يتم فتح ملف الخلية ل "
 
 #: ../vector/v.transform/main.c:277
 #, fuzzy
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr "التوقيع ..."
 
 #: ../vector/v.transform/main.c:290
