--- a/locale/po/grassmods_tr.po
+++ b/locale/po/grassmods_tr.po
@@ -33837,7 +33837,7 @@ msgstr "<%s> sütunu kullanılamıyor"
 
 #: ../vector/v.transform/main.c:277
 #, fuzzy
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr "Veri okunuyor..."
 
 #: ../vector/v.transform/main.c:290
