--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -34736,7 +34736,7 @@ msgstr "Nelze zacyklit řetězec ve sloupci: [%s]"
 
 #: ../vector/v.transform/main.c:277
 #, fuzzy
-msgid "Tranforming features..."
+msgid "Transforming features..."
 msgstr "Převádím prvky..."
 
 #: ../vector/v.transform/main.c:290
