--- a/locale/po/grassmods_el.po
+++ b/locale/po/grassmods_el.po
@@ -40289,7 +40289,7 @@ msgid ""
 msgstr "Όνομα εξαγόμενου διανυσματικού χάρτη"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
