--- a/locale/po/grassmods_pt.po
+++ b/locale/po/grassmods_pt.po
@@ -43025,7 +43025,7 @@ msgid ""
 msgstr "Mapa de saída no qual os erros serão gravados"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
