--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -41940,7 +41940,7 @@ msgid ""
 msgstr "خريطة مخرجة حيث ستكتب النقاط"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
