--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -40516,7 +40516,7 @@ msgid ""
 msgstr "출력할 격자지도"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
