--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -41849,7 +41849,7 @@ msgid ""
 msgstr "Nazwa wyjściowej wektorowej mapy punktów"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
