--- a/locale/po/grassmods_ro.po
+++ b/locale/po/grassmods_ro.po
@@ -39337,7 +39337,7 @@ msgid ""
 msgstr ""
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
