various spelling errors fixed (trac https://trac.osgeo.org/grass/ticket/2950)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@68016 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -40852,7 +40852,7 @@ msgstr ""
 
 #: ../vector/v.build/main.c:61
 #, fuzzy
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 "Erzeuge Topologie oder schreibe die Topologie oder den räumlichen Index nach "
 "stdout."
