--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -42884,7 +42884,7 @@ msgid ""
 msgstr "Nom de la couche en sortie où les erreurs seront écrites"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
