--- a/locale/po/grassmods_es.po
+++ b/locale/po/grassmods_es.po
@@ -40973,7 +40973,7 @@ msgstr ""
 "Nombre del mapa vectorial donde se escriben elementos vectoriales erróneos"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr "Construir topología o volcar topología o índices a salida estandar"
 
 #: ../vector/v.build/main.c:65
