--- a/locale/po/grassmods_tr.po
+++ b/locale/po/grassmods_tr.po
@@ -39639,7 +39639,7 @@ msgid ""
 msgstr "Hatalı vektör objelerinin yazılacağı vektör haritanın adı"
 
 #: ../vector/v.build/main.c:61
-msgid "Build topology or dump topology or indeces to standard output"
+msgid "Build topology or dump topology or indices to standard output"
 msgstr ""
 
 #: ../vector/v.build/main.c:65
