i.target: Fix a message (complete r68090)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68105 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -15551,7 +15551,7 @@ msgid "Name of target mapset"
 msgstr "Name des Zielmapsets."
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr "Setzt aktuelle Location und Mapset als Ziel für die Bildgruppe."
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
