--- a/locale/po/grassmods_ro.po
+++ b/locale/po/grassmods_ro.po
@@ -14466,7 +14466,7 @@ msgid "Name of target mapset"
 msgstr ""
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr ""
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
