--- a/locale/po/grassmods_tr.po
+++ b/locale/po/grassmods_tr.po
@@ -15357,7 +15357,7 @@ msgid "Name of target mapset"
 msgstr "Hedef harita takımının adı"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr ""
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
