i.target: Fix a message (https://trac.osgeo.org/grass/changeset/68090 + https://trac.osgeo.org/grass/changeset/68105)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@68106 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -15751,7 +15751,7 @@ msgid "Name of target mapset"
 msgstr "Nom du jeu de données en sortie"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr ""
 "Règle le Secteur courant et le jeu de donnée comme cible du groupe d'images"
 
