--- a/locale/po/grassmods_ar.po
+++ b/locale/po/grassmods_ar.po
@@ -14984,7 +14984,7 @@ msgid "Name of target mapset"
 msgstr "اسم الخريطة الناتجة"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr ""
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
