--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -15092,7 +15092,7 @@ msgid "Name of target mapset"
 msgstr "Název cílového mapsetu"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr "Nastaví aktuální lokaci a mapset jako cíl pro obrazovou skupinu"
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
