--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -15096,7 +15096,7 @@ msgid "Name of target mapset"
 msgstr "Имя целевого набора"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr "Установить текущую область и набор как целевые для группы изображений"
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
