--- a/locale/po/grassmods_sl.po
+++ b/locale/po/grassmods_sl.po
@@ -15068,7 +15068,7 @@ msgid "Name of target mapset"
 msgstr "Ime izhodnega rastrskega sloja"
 
 #: ../imagery/i.target/main.c:68
-msgid "Set current location and mapset as target for of imagery group"
+msgid "Set current location and mapset as target for imagery group"
 msgstr ""
 
 #: ../imagery/i.target/main.c:90 ../imagery/i.target/main.c:107
