Czech translation file: added Stanislav Horacek as author (https://trac.osgeo.org/grass/changeset/68245)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68249 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_cs.po
+++ b/locale/po/grassmods_cs.po
@@ -9,6 +9,7 @@
 # Miroslav Hořejší <miroslav.horejsi@fsv.cvut.cz>, 2009/01.
 # Pavel Valenta <pavel.valenta@fsv.cvut.cz>, 2009/01.
 # Lukáš Bocan <lukas.bocan@fsv.cvut.cz>, 2013.
+# Stanislav Horáček <stanislav.horacek@gmail.com>, 2015.
 #
 msgid ""
 msgstr ""
